Add JPA model, show history

--- a/src/main/webapp/WEB-INF/templates/layout.html
+++ b/src/main/webapp/WEB-INF/templates/layout.html
@@ -104,7 +104,7 @@
     <!-- Following Menu -->
     <div class="ui large top fixed menu transition hidden">
         <div class="ui container">
-            <a class="active item">Home</a>
+            <a class="item">Home</a>
             <a class="item">Work</a>
             <a class="item">Company</a>
             <a class="item">Careers</a>
@@ -140,7 +140,7 @@
                 <a class="toc item">
                     <i class="sidebar icon"></i>
                 </a>
-                <a class="active item">Home</a>
+                <a class="item">Home</a>
                 <div class="ui dropdown item">
                     My request <i class="dropdown icon"></i>
                     <div class="menu">
