--- a/src/main/webapp/WEB-INF/templates/myrequest/history.html
+++ b/src/main/webapp/WEB-INF/templates/myrequest/history.html
@@ -12,31 +12,43 @@
     <header th:replace="layout::site-header"></header>
     <main class="ui grid container">
         <div class="sixteen wide column">
-            <table class="ui celled table">
-                <thead>
-                <tr>
-                    <th>From</th>
-                    <th>To</th>
-                    <th>Days</th>
-                    <th>Type</th>
-                    <th>Status</th>
-                    <th>Approvers</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="request: ${requests}">
-                    <td th:text="${request.fromDate}">20-Jun-2016</td>
-                    <td th:text="${request.toDate}">25-Jun-2016</td>
-                    <td th:text="${request.fromDate}">6</td>
-                    <td th:text="${request.vacationType.name}">Vacation</td>
-                    <td>Pending</td>
-                    <td>
-                        <i class="remove icon red" ></i>Till Gartner
-                        Binh Phan
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <div class="column">
+                <h4 class="ui top attached header">Request History</h4>
+                <div class="ui bottom attached segment">
+                    <table class="ui celled table">
+                        <thead>
+                        <tr>
+                            <th>From</th>
+                            <th>To</th>
+                            <th>Days</th>
+                            <th>Type</th>
+                            <th>Status</th>
+                            <th>Approvers</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="request: ${requests}">
+                            <td th:text="${request.fromDate}">20-Jun-2016</td>
+                            <td th:text="${request.toDate}">25-Jun-2016</td>
+                            <td th:text="${request.getDays()}">6</td>
+                            <td th:text="${request.vacationType.name}">Vacation</td>
+                            <td th:text="${request.getStatus()}">Pending</td>
+                            <td>
+                                <div class="ui list">
+                                    <div class="item" th:each="requestStatus: ${request.requestStatuses}">
+                                        <i class="icon" th:classappend="${requestStatus.approved}  == true
+                                        ? 'checkmark green'
+                                        : (${requestStatus.approved} == false
+                                            ? 'remove red' : '')"></i>
+                                        <div class="content" th:text="${requestStatus.id.leader.getFullName()} ">Till Garner</div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </main>
     <footer th:replace="layout::site-footer"></footer>
