--- a/src/main/webapp/WEB-INF/templates/layout.html
+++ b/src/main/webapp/WEB-INF/templates/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0045)http://semantic-ui.com/examples/homepage.html -->
-<html xmlns:th="http://www.thymeleaf.org" class="gr__semantic-ui_com">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" class="gr__semantic-ui_com">
 <head th:fragment="site-head" th:remove="tag">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Standard Meta -->
@@ -140,23 +140,29 @@
                 <a class="toc item">
                     <i class="sidebar icon"></i>
                 </a>
-                <a class="item">Home</a>
-                <div class="ui dropdown item">
+                <a class="item" href="index.html" th:href="@{/}">Home</a>
+                <div class="ui dropdown item" sec:authorize="hasRole('ROLE_USER')">
                     My request <i class="dropdown icon"></i>
                     <div class="menu">
                         <a href="myrequest/booking.html" th:href="@{/my-request/booking}" class="item">Book Time Off</a>
                         <a href="myrequest/history.html" th:href="@{/my-request/history}" class="item">History</a>
                     </div>
                 </div>
-                <div class="ui dropdown item">
+                <div class="ui dropdown item" sec:authorize="hasRole('ADMIN')">
                     Admin <i class="dropdown icon"></i>
                     <div class="menu">
-                        <a href="#" class="item">Hello</a>
+                        <a href="#" class="item">Pending request</a>
                     </div>
                 </div>
-                <div class="right item">
+                <div class="right item" sec:authorize="isAnonymous()">
                     <a class="ui inverted button" id="login-button">Log in</a>
                     <a class="ui inverted button" id="signup-button">Sign Up</a>
+                </div>
+                <div class="right item" sec:authorize="isAuthenticated()">
+                    <a class="ui inverted button">Hello</a>
+                    <a class="ui inverted button" id="logout-button" onclick="document.getElementById('logoutForm').submit();">Log out</a>
+                    <form id="logoutForm" th:action="@{/logout}" method="post">
+                    </form>
                 </div>
             </div>
         </div>
