--- a/src/main/webapp/WEB-INF/templates/myrequest/history.html
+++ b/src/main/webapp/WEB-INF/templates/myrequest/history.html
@@ -46,6 +46,22 @@
                             </td>
                         </tr>
                         </tbody>
+                        <tfoot>
+                        <tr><th colspan="6">
+                            <div class="ui right floated pagination menu" th:with="historyUrl='/my-request/history'">
+                                <a class="icon item" th:if="${!requests.isFirst()}" th:href="@{${historyUrl}(page=(${currentIndex}-1))}">
+                                    <i class="left chevron icon"></i>
+                                </a>
+                                <a class="item" th:each="i:${#numbers.sequence(beginIndex, endIndex)}"
+                                   th:text="${i}" th:classappend="${currentIndex == i} ? 'active' : ''"
+                                   th:href="@{${historyUrl}(page=${i})}">
+                                </a>
+                                <a class="icon item" th:if="${!requests.isLast()}" th:href="@{${historyUrl}(page=(${currentIndex}+1))}">
+                                    <i class="right chevron icon"></i>
+                                </a>
+                            </div>
+                        </th>
+                        </tr></tfoot>
                     </table>
                 </div>
             </div>
