--- a/src/main/webapp/WEB-INF/templates/auth/login.html
+++ b/src/main/webapp/WEB-INF/templates/auth/login.html
@@ -1,11 +1,11 @@
-<main  xmlns:th="http://www.thymeleaf.org">
-    <div class="ui small modal" id="login-modal" th:fragment="modal-login">
+<main  xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+    <div class="ui small modal" id="login-modal" th:fragment="modal-login" sec:authorize="isAnonymous()">
         <i class="close icon"></i>
         <div class="header">
             Log in to your account
         </div>
         <div class="content">
-            <form class="ui form" th:action="@{/login}" method="post">
+            <form class="ui form" th:action="@{/}" method="post">
                 <div class="ui segment">
                     <div class="field">
                         <label>Email</label>
