Admin pending request UI

--- a/src/main/webapp/WEB-INF/templates/layout.html
+++ b/src/main/webapp/WEB-INF/templates/layout.html
@@ -151,7 +151,7 @@
                 <div class="ui dropdown item" sec:authorize="hasRole('ADMIN')">
                     Admin <i class="dropdown icon"></i>
                     <div class="menu">
-                        <a href="#" class="item">Pending request</a>
+                        <a href="admin/pending_requests" class="item">Pending request</a>
                     </div>
                 </div>
                 <div class="right item" sec:authorize="isAnonymous()">
